--- a/portfolio.html
+++ b/portfolio.html
@@ -48,10 +48,12 @@
                     <div class="col-md-6">
                         <div class="row" id"box-search">
                             <div class="thumbnail text-center">
-                                <img id="pro-1" src="https://placehold.it/200x200" class="img-responsive">
-                                <div class="caption" style="position: absolute; top: 160px;">
-                                    <p style="background-color: black; color: white; width: 200px;">Project 1</p>
-                                </div>
+                                <a href="https://richardcsorenoson/github.io/HW-Hangman">
+                                    <img id="pro-1" src="https://richardcsorenson.github.io/HW-Hangman/assets/images/leftArm.jpeg" class="img-responsive" width="200px", height="200px">
+                                    <div class="caption" style="position: absolute; top: 160px;">
+                                        <p style="background-color: black; color: white; width: 200px;">Hangman</p>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                         <br>
