--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
                     <div class="col-md-6">
                         <div class="row" id"box-search">
                             <div class="thumbnail text-center">
-                                <a href="https://richardcsorenoson/github.io/HW-Hangman">
+                                <a href="https://richardcsorenson.github.io/HW-Hangman">
                                     <img id="pro-1" src="https://richardcsorenson.github.io/HW-Hangman/assets/images/leftArm.jpeg" class="img-responsive" width="200px", height="200px">
                                     <div class="caption" style="position: absolute; top: 160px;">
                                         <p style="background-color: black; color: white; width: 200px;">Hangman</p>
