added link to trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,10 +76,12 @@
                     <div class="col-md-6">
                         <div class="row" id"box-search">
                             <div class="thumbnail text-center">
-                                <img id="pro-1" src="https://placehold.it/200x200" class="img-responsive">
-                                <div class="caption" style="position: absolute; top: 160px;">
-                                    <p style="background-color: black; color: white; width: 200px;">Project 3</p>
-                                </div>
+                                <a href="https://richardcsorenson.github.io/HW-TriviaGame/">
+                                    <img id="pro-1" src="https://placehold.it/200x200" class="img-responsive">
+                                    <div class="caption" style="position: absolute; top: 160px;">
+                                        <p style="background-color: black; color: white; width: 200px; height: 200px;">Project 3</p>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                         <br>
