--- a/index.html
+++ b/index.html
@@ -62,18 +62,22 @@
             <div class="col-md-8">
                 <img id="bio-image" src="https://placehold.it/200x200" class="img-thumbnail rounded float-left">
                 <p>
-                    So I guess I should start by introducing myself, my full name is Richard Charles Sorenson the Third. I was born July 31 1990,
-                     third child of Richard Charles Sorenson the Second and Jill Sorenson. I am married to Samantha Sorenson, have been for almost 
-                     5 years now and have loved all of it. My early years of life were split between Utah and California, and when I turned 10 my 
-                     family moved out east to Indiana and later Ohio.
+                    Hello, my name is Richard Sorenson.  I have been programming at some level for fourteen years.  
+                    I started out learning Pascal, C, and Java as a teenager.  As I’ve grown older, I have advanced 
+                    my abilities through classes at several universities including Utah Valley University and The 
+                    University of Utah.  I will be awarded a certificate in Full Stack Development from The University 
+                    of Utah in October.  I am specifically skilled in the following areas: Responsive Web Design following 
+                    REST guidelines, SEO, JavaScript (jQuery), PHP, HTML, CSS (Bootstrap), MySQL (Sequelize), and 
+                    Node.js (Express and React).  I am also proficient in working in groups using Git and Heroku.  
+                    Additionally, I have had quite a bit of experience in management at different jobs I have had over 
+                    the years.
                 </p>
                 <br>
-                <p>I have a fairly normal work history in the sense that like most teenagers I decided to get a part time job to have some extra 
-                    spending money on the side. I started working for Chick-fil-a in 2007, and became a manager within two years. In 2010 I left 
-                    Chick-fil-a to serve a 2 year mission for the LDS church in Portland Oregon, where I served in several leadership roles and 
-                    trained new missionaries several times. In 2012 I returned home and started working for UPS as a package handler (I loaded semi
-                    -trucks). After 2 years at UPS I moved to Utah to further my education (also the education of my new wife Samantha). While in 
-                    Utah I started working for Chick-fil-a again, and have been there for the past 4.5 years.
+                <p>
+                    I have been happily married to my wife for over five years.  We have two dogs, Sweetie and Raven.  
+                    Sweetie is a little black shih poo (shih tzu/miniature poodle mix) and Raven is a black lab/hound mix.  
+                    My hobbies include video games, roleplay games, and reading.  I also enjoy spending time with my family.
+
                 </p>
             </div>
             <div class="col-md-4">
