--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,13 +10,14 @@
     <!-- <script src="main.js"></script> -->
 </head>
 <style>
-    body{
+    body {
         background-image: url(nasty_fabric/nasty_fabric.png);
         font-family: 'Poor Story', cursive;
         font-size: 1.5rem;
         line-height: 2rem;
     }
 </style>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Richard Sorenson</a>
@@ -36,7 +38,7 @@
     <div class="container">
         <!-- ROW 1 -->
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8" id="tada">
                 <!-- ROW 1 SUB-ROW 1 -->
                 <div class="row">
                     <div class="col-md-12">
@@ -46,27 +48,29 @@
                 <!-- ROW 1 SUB-ROW 2 -->
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="row" id"box-search">
+                        <div class="row" id "box-search">
                             <div class="thumbnail text-center">
-                                <a href="https://richardcsorenson.github.io/HW-Hangman">
-                                    <img id="pro-1" src="https://richardcsorenson.github.io/HW-Hangman/assets/images/leftArm.jpeg" class="img-responsive" width="200px", height="200px">
-                                    <div class="caption" style="position: absolute; top: 160px;">
-                                        <p style="background-color: black; color: white; width: 200px;">Hangman</p>
-                                    </div>
-                                </a>
+
+                                <img id="pro-1" src="https://richardcsorenson.github.io/HW-Hangman/assets/images/leftArm.jpeg" class="img-responsive" width="200px"
+                                    , height="200px">
+                                <div class="caption" style="position: absolute; top: 160px;">
+                                    <p class="hangman" data style="background-color: black; color: white; width: 200px;">Hangman</p>
+                                </div>
+
                             </div>
                         </div>
                         <br>
                     </div>
                     <div class="col-md-6">
-                        <div class="row" id"box-search">
+                        <div class="row" id "box-search">
                             <div class="thumbnail text-center">
-                                <a href="https://richardcsorenson.github.io/HW-StarWarsGame/">
-                                    <img id="pro-1" src="https://richardcsorenson.github.io/HW-StarWarsGame/assets/images/triforce.jpeg" class="img-responsive" width="200px", height="200px">
-                                    <div class="caption" style="position: absolute; top: 160px;">
-                                        <p style="background-color: black; color: white; width: 200px;">Crystal Game</p>
-                                    </div>
-                                </a>
+
+                                <img id="pro-1" src="https://richardcsorenson.github.io/HW-StarWarsGame/assets/images/triforce.jpeg" class="img-responsive"
+                                    width="200px" , height="200px">
+                                <div class="caption" style="position: absolute; top: 160px;">
+                                    <p class="crystal" style="background-color: black; color: white; width: 200px;">Crystal Game</p>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -74,25 +78,27 @@
                 <!-- ROW 1 SUB-ROW 3 -->
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="row" id"box-search">
+                        <div class="row" id "box-search">
                             <div class="thumbnail text-center">
-                                <a href="https://richardcsorenson.github.io/HW-TriviaGame/">
-                                    <img id="pro-1" src="https://placehold.it/200x200" class="img-responsive">
-                                    <div class="caption" style="position: absolute; top: 160px;">
-                                        <p style="background-color: black; color: white; width: 200px; height: 200px;">Project 3</p>
-                                    </div>
-                                </a>
+
+                                <img id="pro-1" src="https://placehold.it/200x200" class="img-responsive">
+                                <div class="caption" style="position: absolute; top: 160px;">
+                                    <p class="triva" style="background-color: black; color: white; width: 200px;">Timed Trivia</p>
+                                </div>
+
                             </div>
                         </div>
                         <br>
                     </div>
                     <div class="col-md-6">
-                        <div class="row" id"box-search">
+                        <div class="row" id "box-search">
                             <div class="thumbnail text-center">
+
                                 <img id="pro-1" src="https://placehold.it/200x200" class="img-responsive">
                                 <div class="caption" style="position: absolute; top: 160px;">
-                                    <p style="background-color: black; color: white; width: 200px;">Project 4</p>
+                                    <p class="apiCalls" style="background-color: black; color: white; width: 200px;">First API calls</p>
                                 </div>
+
                             </div>
                         </div>
                     </div>
@@ -100,23 +106,63 @@
                 <!-- ROW 1 SUB-ROW 4 -->
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="row" id"box-search">
+                        <div class="row" id "box-search">
                             <div class="thumbnail text-center">
                                 <img id="pro-1" src="https://placehold.it/200x200" class="img-responsive">
                                 <div class="caption" style="position: absolute; top: 160px;">
-                                    <p style="background-color: black; color: white; width: 200px;">Project 5</p>
+                                    <p class="groupPrj" style="background-color: black; color: white; width: 200px;">1st Group Project</p>
                                 </div>
                             </div>
                         </div>
                         <br>
                     </div>
                     <div class="col-md-6">
-                        <!-- Empty col for more potential projects -->
+                        <div class="row" id "box-search">
+                            <div class="thumbnail text-center">
+
+                                <img id="pro-1" src="https://placehold.it/200x200" class="img-responsive">
+                                <div class="caption" style="position: absolute; top: 160px;">
+                                    <p class="psychic" style="background-color: black; color: white; width: 200px;">Are you psychic?</p>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <!-- ROW 1 SUB-ROW 5 -->
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="row" id "box-search">
+                            <div class="thumbnail text-center">
+                                <img id="pro-1" src="https://placehold.it/200x200" class="img-responsive">
+                                <div class="caption" style="position: absolute; top: 128px;">
+                                    <p class="startSQL" style="background-color: black; color: white; width: 200px;">Starting with SQL</p>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row" id "box-search">
+                            <div class="thumbnail text-center">
+
+                                <img id="pro-1" src="https://placehold.it/200x200" class="img-responsive">
+                                <div class="caption" style="position: absolute; top: 160px;">
+                                    <p class="duber" style="background-color: black; color: white; width: 200px;">Duber</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <br>
             </div>
             <div class="col-md-4">
-                <!-- This will be where a side bar goes with links and what not -->
+                <a href="https://github.com/richardcsorenson">Github Link</a>
+                <a href="">LinkedIn account: </a>
+                <a href="">Heroku account: </a>
             </div>
         </div>
     </div>
@@ -124,4 +170,5 @@
         <p class="text-center">Copyright &copy;</p>
     </footer>
 </body>
+
 </html>
