--- a/portfolio.html
+++ b/portfolio.html
@@ -161,8 +161,10 @@
             </div>
             <div class="col-md-4">
                 <a href="https://github.com/richardcsorenson">Github Link</a>
-                <a href="">LinkedIn account: </a>
-                <a href="">Heroku account: </a>
+                <br>
+                <a href="https://www.linkedin.com/in/richard-sorenson-61b081158/">LinkedIn account</a>
+                <br>
+                <!-- <a href="">Heroku account</a> -->
             </div>
         </div>
     </div>
