--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Porfolio</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
