--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- ROW 2 -->
         <div class="row">
             <div class="col-md-8">
-                <img id="bio-image" src="https://placehold.it/200x200" class="img-thumbnail rounded float-left">
+                <img id="bio-image" src="./profilepic.jpg" style="width: 200px; height: 200px;" class="img-thumbnail rounded float-left">
                 <p>
                     Hello, my name is Richard Sorenson.  I have been programming at some level for fourteen years.  
                     I started out learning Pascal, C, and Java as a teenager.  As I’ve grown older, I have advanced 
